--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
     <strong>Aug 2025</strong> I will serve as Speaker Program Chair (Keynotes & Panel Sessions) and Steering Committee for IEEE ICAD 2026. Please fill out this <a href="https://forms.gle/wpRSebweXdLVjxwi9">form</a> to apply as a speaker, or this <a href="https://forms.gle/gYnPirBgyKHxg1DS9">form</a> to sign up as a reviewer!
   </li>
   <li>
-    <strong>Aug 2025</strong> Our paper <a href="https://openreview.net/pdf?id=msinSJ5w16">DocAgent</a> is accepted by <em>EMNLP 2025</em>.
+    <strong>Aug 2025</strong> Our paper <a href="https://aclanthology.org/2025.emnlp-main.893">DocAgent</a> is accepted by <em>EMNLP 2025</em>.
   </li>
   <li>
     <strong>Aug 2025</strong> Honored to be nominated for membership in <a href="./awards/SigmaXi_2025.pdf">Sigma Xi, The Scientific Research Honor Society</a> (<a href="./awards/SigmaXi_Certificate-ShuyueJia.pdf">Certificate</a>).
@@ -623,7 +623,7 @@
       <font color="#00066f">DocAgent: An Agentic Framework for Multi-Modal Long-Context Document Understanding</font>
     </div>
     <div style="float:right;">
-      <a href="https://openreview.net/pdf?id=msinSJ5w16"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
+      <a href="https://aclanthology.org/2025.emnlp-main.893"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div><br>
     Li Sun, Liu He, <strong>Shuyue Jia</strong>, Yangfan He, Chenyu You
     <br><em>The 2025 Conference on Empirical Methods in Natural Language Processing</em> (EMNLP 2025)
