--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Shuyue Jia (Bruce Jia)</title>
+  <title>Jia Shuyue (Bruce)</title>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -74,14 +74,9 @@
 <body>
 <div class="wrapper">
   <div class="navbar container">
-    <a id="author-name" class="alignable pull-left"
-      style="text-decoration:none; display: flex; align-items: center; gap: 0.05em;">
-      Shuyue Jia (<img class="chinese-name-img" src="./imgs/Profile/chinese_name.png"
-        alt="贾舒越" style="width: 170px; height: auto; vertical-align: middle;">)
+    <a id="author-name" class="alignable pull-left" style="text-decoration:none; display: flex; align-items: center; gap: 0.05em;">
+      Jia Shuyue (<img class="chinese-name-img" src="./imgs/Profile/chinese_name.png" alt="贾舒越" style="width: 170px; height: auto; vertical-align: middle;">)
     </a>
-<!--<a id="author-name" class="alignable pull-right"-->
-<!--  style="width: 260px; text-decoration:none; display: flex; align-items: center; transform: translateY(15px);"-->
-<!--  href="https://brucejia.myportfolio.com">Photography</a>-->
   </div>
 <div style="clear:both"></div>
 
@@ -596,7 +591,8 @@
     </div>
     <div style="float:right;">
       <a href="./files/Presentation/Evidence-Retrieval-and-Grounding.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
-      <a href="https://www.medrxiv.org/content/10.1101/2025.08.06.25333160v1"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
+      <a href="./files/Manuscripts/Tool_using_AI_agent_2025.pdf"><i class="fab fa fa-file-pdf-o"></i> Manuscript</a>
+      <a href="https://www.medrxiv.org/content/10.1101/2025.08.06.25333160v1"><i class="fab fa fa-file-pdf-o"></i> medRxiv</a>
     </div><br>
     <strong>Shuyue Jia</strong>, Subhrangshu Bit, Varuna H. Jasodanand, Yi Liu, Vijaya B. Kolachalama
     <br><em>Technical Report</em>
