--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     Department of ECE, Boston University<br>
     Add: Kolachalama Lab, 14/F, Center for Computing & Data Sciences,<br>
     Boston University, 665 Commonwealth Ave., Boston, MA 02215<br>
-    Tel: +1 (617) 685-1479<br>
+    Tel: +1 (213) 296-5422<br>
     Email: <a href="mailto:brucejia@bu.edu">brucejia@bu.edu</a>; <a href="mailto:shuyuej@ieee.org">shuyuej@ieee.org</a><br>
     
     <p><font color="#9933CC">𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗧𝗲𝗮𝗺</font></p>
@@ -371,6 +371,9 @@
 
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
+  <li>
+    <strong>Nov 2025</strong> I was appointed as the Area Chair (2026–2027) for the IEEE Boston Section Circuits and Systems (CAS) Society. If you’re interested in serving as a speaker, please complete this <a href="https://forms.gle/nw61BXSjH1mBaJAU6">application form</a>.
+  </li>
   <li>
     <strong>Oct 2025</strong> I will serve as a Technical Track co-chair volunteer for IEEE MIT URTC 2025.
   </li>
