--- a/index.html
+++ b/index.html
@@ -341,6 +341,11 @@
       <p class="image-description">Our Research Team @ <a href="https://vkola-lab.github.io/team/">Kolachalama Laboratory</a></p>
       <p class="image-description">BU Center for Computing & Data Sciences, Boston, MA (Winter 2024)</p>
     </div>
+    <div class="profile-container">
+      <img width="99%device-width" src="./imgs/team/Research_at_BU_2025_Fall.jpg" /><br><br>
+      <p class="image-description">Our Research Team @ <a href="https://vkola-lab.github.io/team/">Kolachalama Laboratory</a></p>
+      <p class="image-description">BU Center for Computing & Data Sciences, Boston, MA (Winter 2025)</p>
+    </div>
     
     <p><font color="#9933CC">𝗜𝗘𝗘𝗘 𝗧𝗲𝗮𝗺</font></p>
     <div class="profile-container">
