--- a/index.html
+++ b/index.html
@@ -652,6 +652,7 @@
       <a href="./files/Presentation/Evidence-Retrieval-and-Grounding.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
       <a href="https://github.com/vkola-lab/podgpt"><i class="fa fa-github"></i> Codes</a>
       <a href="https://www.nature.com/articles/s44385-025-00022-0"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
+      <a href="https://static-content.springer.com/esm/art%3A10.1038%2Fs44385-025-00022-0/MediaObjects/44385_2025_22_MOESM1_ESM.pdf"><i class="fab fa fa-file-pdf-o"></i> Supplementary Materials</a>
     </div><br>
     <strong>Shuyue Jia</strong>, Subhrangshu Bit, Edward Searls, Meagan V. Lauber, Lindsey A. Claus, Pengrui Fan, Varuna H. Jasodanand, Divya Veerapaneni, William M. Wang, Rhoda Au, Vijaya B. Kolachalama
     <br><em>Nature npj Biomedical Innovations</em>
