--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
   <br>
   
   Email: <a href="mailto:brucejia@bu.edu">brucejia@bu.edu</a>; <a href="mailto:shuyuej@ieee.org">shuyuej@ieee.org</a>
-  
+
   <br>
   <a href="./files/Resume/Curriculum_Vitae_Shuyue_JIA.pdf"><i class="fab fa fa-file-pdf-o"></i>&#32;Resume</a>
   <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i>&#32;Scholar</a>
@@ -381,23 +381,17 @@
   <li>
     <strong>Oct 2025</strong> I will serve as a Technical Track co-chair volunteer for IEEE MIT URTC 2025.
   </li>
-  <!-- <li>
-    <strong>Sept 2025</strong> Glad to receive the <a href="./awards/IEEE_MultiMedia_reviewer_certificate.pdf">2024 IEEE MultiMedia Reviewer Certiﬁcate</a> from <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=93">IEEE MultiMedia</a>, the <a href="./awards/IEEE_OJCS_reviewer_certificate.pdf">2024 Reviewer Certiﬁcate</a> from <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8782664">IEEE Open Journal of the Computer Society</a>, and the <a href="./awards/CVIU_reviewer_certificate.pdf">Certificate of Reviewing</a> from <a href="https://www.sciencedirect.com/journal/computer-vision-and-image-understanding">Computer Vision and Image Understanding</a>.
-  </li> -->
   <li>
-    <strong>Aug 2025</strong> I will serve as Speaker Program Chair (Keynotes & Panel Sessions) and Steering Committee for IEEE ICAD 2026. Please fill out this <a href="https://forms.gle/wpRSebweXdLVjxwi9">form</a> to apply as a speaker, or this <a href="https://forms.gle/gYnPirBgyKHxg1DS9">form</a> to sign up as a reviewer!
+    <strong>Aug 2025</strong> I will serve as Speaker Program Chair (Keynotes & Panel Sessions) and Steering Committee for IEEE ICAD 2026.
   </li>
   <li>
-    <strong>Aug 2025</strong> Our paper <a href="https://aclanthology.org/2025.emnlp-main.893">DocAgent</a> is accepted by <em>EMNLP 2025</em>.
+    <strong>Aug 2025</strong> Our paper <a href="https://aclanthology.org/2025.emnlp-main.893">Multi-agent System for Document Intelligence</a> is accepted by <em>EMNLP 2025</em>.
   </li>
-  <!-- <li>
-    <strong>Aug 2025</strong> Honored to be nominated for membership in <a href="./awards/SigmaXi_2025.pdf">Sigma Xi, The Scientific Research Honor Society</a> (<a href="./awards/SigmaXi_Certificate-ShuyueJia.pdf">Certificate</a>).
-  </li> -->
   <li>
     <strong>Aug 2025</strong> A <a href="./files/Presentation/Evidence-Retrieval-and-Grounding.pdf"> Presentation</a> of Evidence Retrieval and Grounding in Medicine.
   </li>
   <li>
-    <strong>Aug 2025</strong> Our <a href="https://www.medrxiv.org/content/10.1101/2025.08.06.25333160v1"> Medical Evidence Retrieval & Grounding Agentic System </a> is available online!
+    <strong>Aug 2025</strong> Our <a href="https://www.medrxiv.org/content/10.1101/2025.08.06.25333160v1"> Medical Agentic RAG System</a> is available online!
   </li>
   <li>
     <strong>July 2025</strong> Open Source <a href="https://github.com/SuperBruceJia/Awesome-Text-Generation-Evaluation"> Awesome Text Generation Evaluation</a>, a curated list of evaluation metrics for Natural Language Generation (NLG)
@@ -414,7 +408,7 @@
     <strong>May 2025</strong> Our paper <a href="https://www.nature.com/articles/s44385-025-00022-0">PodGPT</a> is accepted by <em>Nature npj Biomedical Innovations</em>.
   </li>
   <li>
-    <strong>Mar 2025</strong> Honored to receive the <a href="./awards/IEEE_Boston_Section_2025.pdf">2025 IEEE Boston Section Arthur Winston Student Award</a> from the <a href="https://ieeeboston.org/">IEEE Boston Section</a>, <em>"For outstanding contributions to the Boston Section Local Conference Committee"</em>.
+    <strong>Mar 2025</strong> Honored to receive the 𝟐𝟎𝟐𝟓 𝐈𝐄𝐄𝐄 𝐁𝐨𝐬𝐭𝐨𝐧 𝐒𝐞𝐜𝐭𝐢𝐨𝐧 𝐀𝐫𝐭𝐡𝐮𝐫 𝐖𝐢𝐧𝐬𝐭𝐨𝐧 𝐒𝐭𝐮𝐝𝐞𝐧𝐭 𝐀𝐰𝐚𝐫𝐝 from the <a href="https://ieeeboston.org/">IEEE Boston Section</a>, <em>"For outstanding contributions to the Boston Section Local Conference Committee"</em>.
   </li>
   <li>
     <strong>Dec 2024</strong> I will serve as Scientific Program Committee for AMIA 2025 Clinical Informatics Conference.
@@ -594,7 +588,7 @@
 <ol>
   <li>
     <div style="float:left;">
-      <font color="#00066f">Agentic Memory-augmented Retrieval and Evidence Grounding in Medicine</font>
+      <font color="#00066f">Agentic Memory-augmented Retrieval and Evidence Grounding for Medical Question-Answering Tasks</font>
     </div>
     <div style="float:right;">
       <a href="./files/Presentation/Evidence-Retrieval-and-Grounding.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
