--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <li>𝗠𝗼𝗱𝗲𝗹𝗶𝗻𝗴
     <ul class="arrow-list">
       <li>Multimodal Foundation Model (FM) and Large Vision-language Model (LVLM)</li>
-      <li>LLM-based Agent, Vision-language Agent (VLA), and Multi-agent System (MAS) [<a href="https://www.medrxiv.org/content/10.1101/2025.08.06.25333160v1">1</a>, <a href="https://openreview.net/pdf?id=msinSJ5w16">2</a>]</li>
+      <li>LLM-based Agent, Vision-language Agent (VLA), and Multi-agent System (MAS) [<a href="https://www.medrxiv.org/content/10.1101/2025.08.06.25333160v1">1</a>, <a href="https://aclanthology.org/2025.emnlp-main.893">2</a>]</li>
       <li>Diffusion Model [<a href="https://ieeexplore.ieee.org/document/10566053">1</a>]</li>
       <li>Graph CNN (GCN) [<a href="https://ieeexplore.ieee.org/document/9889159">1</a>]</li>
       <li>Attention-based BiLSTM-GCN [<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2021.706229/full">1</a>]</li>
