--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <br>
   <br>
   
-  I’m also a 𝗪𝗲𝗱𝗱𝗶𝗻𝗴 & 𝗣𝗼𝗿𝘁𝗿𝗮𝗶𝘁 𝗣𝗵𝗼𝘁𝗼𝗴𝗿𝗮𝗽𝗵𝗲𝗿 based in Boston, MA. If you’d like to book a session, I’d love to hear from you—just send me an email!
+  I’m also a 𝗪𝗲𝗱𝗱𝗶𝗻𝗴, 𝗣𝗼𝗿𝘁𝗿𝗮𝗶𝘁, 𝗮𝗻𝗱 𝗘𝘃𝗲𝗻𝘁 𝗣𝗵𝗼𝘁𝗼𝗴𝗿𝗮𝗽𝗵𝗲𝗿 based in Boston, MA. If you’d like to book a session, I’d love to hear from you—just send me an email!
   <a href="https://brucejia.myportfolio.com/">Check out my collections here!</a>
 
   <br>
@@ -114,7 +114,7 @@
   <li>𝗠𝗼𝗱𝗲𝗹𝗶𝗻𝗴
     <ul class="arrow-list">
       <li>Multimodal Foundation Model (FM) and Large Vision-language Model (LVLM)</li>
-      <li>AI Workflow, LLM-based Agent, Vision-language Agent (VLA), and Multi-agent System (MAS) [<a href="https://www.medrxiv.org/content/10.1101/2025.08.06.25333160v1">1</a>, <a href="https://aclanthology.org/2025.emnlp-main.893">2</a>]</li>
+      <li>AI Workflow, Agentic System, and Multi-agent System (MAS) [<a href="https://www.medrxiv.org/content/10.1101/2025.08.06.25333160v1">1</a>, <a href="https://aclanthology.org/2025.emnlp-main.893">2</a>]</li>
       <li>Diffusion Model [<a href="https://ieeexplore.ieee.org/document/10566053">1</a>]</li>
       <li>Graph CNN (GCN) [<a href="https://ieeexplore.ieee.org/document/9889159">1</a>]</li>
       <li>Attention-based BiLSTM-GCN [<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2021.706229/full">1</a>]</li>
@@ -408,7 +408,7 @@
     <strong>May 2025</strong> Our paper <a href="https://www.nature.com/articles/s44385-025-00022-0">PodGPT</a> is accepted by <em>Nature npj Biomedical Innovations</em>.
   </li>
   <li>
-    <strong>Mar 2025</strong> Honored to receive the 𝟐𝟎𝟐𝟓 𝐈𝐄𝐄𝐄 𝐁𝐨𝐬𝐭𝐨𝐧 𝐒𝐞𝐜𝐭𝐢𝐨𝐧 𝐀𝐫𝐭𝐡𝐮𝐫 𝐖𝐢𝐧𝐬𝐭𝐨𝐧 𝐒𝐭𝐮𝐝𝐞𝐧𝐭 𝐀𝐰𝐚𝐫𝐝 from the <a href="https://ieeeboston.org/">IEEE Boston Section</a>, <em>"For outstanding contributions to the Boston Section Local Conference Committee"</em>.
+    <strong>Mar 2025</strong> Honored to receive the 𝟮𝟬𝟮𝟱 𝗜𝗘𝗘𝗘 𝗕𝗼𝘀𝘁𝗼𝗻 𝗦𝗲𝗰𝘁𝗶𝗼𝗻 𝗔𝗿𝘁𝗵𝘂𝗿 𝗪𝗶𝗻𝘀𝘁𝗼𝗻 𝗦𝘁𝘂𝗱𝗲𝗻𝘁 𝗔𝘄𝗮𝗿𝗱 from the <a href="https://ieeeboston.org/">IEEE Boston Section</a>, <em>"For outstanding contributions to the Boston Section Local Conference Committee"</em>.
   </li>
   <li>
     <strong>Dec 2024</strong> I will serve as Scientific Program Committee for AMIA 2025 Clinical Informatics Conference.
