--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <div class="wrapper">
   <div class="navbar container">
     <a id="author-name" class="alignable pull-left" style="text-decoration:none; display: flex; align-items: center; gap: 0.05em;">
-      Jia Shuyue (<img class="chinese-name-img" src="./imgs/Profile/chinese_name.png" alt="贾舒越" style="width: 170px; height: auto; vertical-align: middle;">)
+      Shuyue Jia (Bruce)
     </a>
   </div>
 <div style="clear:both"></div>
