--- a/index.html
+++ b/index.html
@@ -376,13 +376,16 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
-    <strong>Nov 2025</strong> I was appointed as the Area Chair (2026–2027) for the IEEE Boston Section Circuits and Systems (CAS) Society. If you’re interested in serving as a speaker, please complete this <a href="https://forms.gle/nw61BXSjH1mBaJAU6">application form</a>.
+    <strong>Jan 2026</strong> I will serve as a Program Committee member for ACL 2026 (Industry Track).
   </li>
   <li>
-    <strong>Oct 2025</strong> I will serve as a Technical Track co-chair volunteer for IEEE MIT URTC 2025.
+    <strong>Nov 2025</strong> I was appointed as the Area Chair for the IEEE Boston Section Circuits and Systems (CAS) Society.
   </li>
   <li>
-    <strong>Aug 2025</strong> I will serve as Speaker Program Chair (Keynotes & Panel Sessions) and Steering Committee for IEEE ICAD 2026.
+    <strong>Oct 2025</strong> I will serve as a Technical Track Co-chair for IEEE MIT URTC 2025.
+  </li>
+  <li>
+    <strong>Aug 2025</strong> I will serve as the Speaker Program Chair (Keynotes & Panel Sessions) and a Steering Committee member for IEEE ICAD 2026.
   </li>
   <li>
     <strong>Aug 2025</strong> Our paper <a href="https://aclanthology.org/2025.emnlp-main.893">Multi-agent System for Document Intelligence</a> is accepted by <em>EMNLP 2025</em>.
@@ -411,7 +414,7 @@
     <strong>Mar 2025</strong> Honored to receive the 𝟮𝟬𝟮𝟱 𝗜𝗘𝗘𝗘 𝗕𝗼𝘀𝘁𝗼𝗻 𝗦𝗲𝗰𝘁𝗶𝗼𝗻 𝗔𝗿𝘁𝗵𝘂𝗿 𝗪𝗶𝗻𝘀𝘁𝗼𝗻 𝗦𝘁𝘂𝗱𝗲𝗻𝘁 𝗔𝘄𝗮𝗿𝗱 from the <a href="https://ieeeboston.org/">IEEE Boston Section</a>, <em>"For outstanding contributions to the Boston Section Local Conference Committee"</em>.
   </li>
   <li>
-    <strong>Dec 2024</strong> I will serve as Scientific Program Committee for AMIA 2025 Clinical Informatics Conference.
+    <strong>Dec 2024</strong> I will serve as a Scientific Program Committee member for AMIA 2025 Clinical Informatics Conference.
   </li>
   <li>
     <strong>Dec 2024</strong> We have released the source code for our <a href="https://github.com/vkola-lab/PodGPT/tree/main/rag_pipeline"> PodGPT with Retrieval-Augmented Generation (RAG)</a>. This powerful pipeline allows our model to ground responses with the latest scientific evidence from top-tier literature, such as <em>The New England Journal of Medicine</em> (NEJM)!
@@ -423,7 +426,7 @@
     <strong>Oct 2024</strong> We have launched <b>PodRAG</b> on our <a href="https://podgpt.org/">PodGPT</a> platform with the advanced 𝗥𝗲𝘁𝗿𝗶𝗲𝘃𝗮𝗹-𝗔𝘂𝗴𝗺𝗲𝗻𝘁𝗲𝗱 𝗚𝗲𝗻𝗲𝗿𝗮𝘁𝗶𝗼𝗻 (𝗥𝗔𝗚) techniques! It is designed to provide 𝘁𝗵𝗲 𝗺𝗼𝘀𝘁 𝗮𝗰𝗰𝘂𝗿𝗮𝘁𝗲 𝗮𝗻𝗱 𝘂𝗽-𝘁𝗼-𝗱𝗮𝘁𝗲 𝗶𝗻𝗳𝗼𝗿𝗺𝗮𝘁𝗶𝗼𝗻 for medical education and research! Please try it out if you are interested!
   </li>
   <li>
-    <strong>Aug 2024</strong> I will serve as Speaker Program Chair (Keynotes & Panel Sessions) and Steering Committee for IEEE ICAD 2025.
+    <strong>Aug 2024</strong> I will serve as the Speaker Program Chair (Keynotes & Panel Sessions) and a Steering Committee member for IEEE ICAD 2025.
   </li>
   <li>
     <strong>Aug 2024</strong> Open Source and Keep Updating <a href="https://github.com/SuperBruceJia/Awesome-Large-Vision-Language-Model"> Awesome Large Vision-Language Model (LVLM/MM-LLM)</a>, a curated list of Large Vision-Language Model
