--- a/index.html
+++ b/index.html
@@ -376,6 +376,9 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
+    <strong>Jan 2026</strong> Our <a href="https://www.medrxiv.org/content/10.1101/2025.08.06.25333160v1"> Medical Agentic RAG System</a> is accepted by <em>International Journal of Medical Informatics</em>!
+  </li>
+  <li>
     <strong>Jan 2026</strong> I will serve as a Program Committee member for ACL 2026 (Industry Track).
   </li>
   <li>
