--- a/index.html
+++ b/index.html
@@ -934,6 +934,7 @@
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=93" style="color:black;">IEEE MultiMedia (MM)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7361" style="color:black;">IEEE Sensors Journal</a><br>
     <a href="https://www.sciencedirect.com/journal/computer-vision-and-image-understanding" style="color:black;">Computer Vision and Image Understanding (CVIU)</a><br>
+    <a href="https://ietresearch.onlinelibrary.wiley.com/journal/17519667" style="color:black;">IET Image Processing</a><br>  
     <a href="https://ietresearch.onlinelibrary.wiley.com/journal/17518830" style="color:black;">IET Science, Measurement & Technology</a><br>  
     <a href="https://www.jmir.org" style="color:black;">Journal of Medical Internet Research (JMIR)</a>
   </li>
