--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </div>
 
 <p>
-  I am a Ph.D. student in Computer Engineering at <a href="https://www.bu.edu">Boston University</a>, under the supervision of <a href="https://vkola-lab.github.io/team" style="color:black;">Prof. Vijaya Kolachalama</a>. Prior to BU, I received my M.Phil. degree (2023) in Computer Science from <a href="https://www.cityu.edu.hk">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang" style="color:black;">Prof. Shiqi Wang</a>, and B.Eng. degree (2020) in Intelligence Science and Technology from <a href="https://www.neepu.edu.cn">Northeast Electric Power University</a>, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900" style="color:black;">Prof. Yimin Hou</a> and <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html" style="color:black;">Prof. Jinglei Lv</a>. In 2017, I attended a summer school at <a href="https://uci.edu">University of California, Irvine</a>. I am a member of a research lab that emphasizes a 𝘁𝗲𝗮𝗺-𝗳𝗶𝗿𝘀𝘁 culture and values 𝗾𝘂𝗮𝗹𝗶𝘁𝘆, 𝗶𝗻𝘁𝗲𝗴𝗿𝗶𝘁𝘆, 𝗹𝗲𝗮𝗱𝗲𝗿𝘀𝗵𝗶𝗽, and 𝘀𝗲𝗿𝘃𝗶𝗰𝗲.
+  I am a Ph.D. student in Computer Engineering at <a href="https://www.bu.edu">Boston University</a>, under the supervision of <a href="https://vkola-lab.github.io/team" style="color:black;">Prof. Vijaya Kolachalama</a>. Prior to BU, I received my M.Phil. degree (2023) in Computer Science from <a href="https://www.cityu.edu.hk">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang" style="color:black;">Prof. Shiqi Wang</a>, and B.Eng. degree (2020) in Intelligence Science and Technology from <a href="https://www.neepu.edu.cn">Northeast Electric Power University</a>, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900" style="color:black;">Prof. Yimin Hou</a> and <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html" style="color:black;">Prof. Jinglei Lv</a>. In 2017, I attended a summer school at <a href="https://uci.edu">University of California, Irvine</a>. I am a member of a research lab that emphasizes a 𝘁𝗲𝗮𝗺-𝗳𝗶𝗿𝘀𝘁 culture and values 𝗾𝘂𝗮𝗹𝗶𝘁𝘆, 𝗶𝗻𝘁𝗲𝗴𝗿𝗶𝘁𝘆, 𝗹𝗲𝗮𝗱𝗲𝗿𝘀𝗵𝗶𝗽, and 𝘀𝗲𝗿𝘃𝗶𝗰𝗲. My goal is to translate cutting-edge research into impactful clinical applications.
   
   <br>
   <br>
@@ -602,7 +602,7 @@
       <a href="https://www.medrxiv.org/content/10.1101/2025.08.06.25333160v1"><i class="fab fa fa-file-pdf-o"></i> medRxiv</a>
     </div><br>
     <strong>Shuyue Jia</strong>, Subhrangshu Bit, Varuna H. Jasodanand, Yi Liu, Vijaya B. Kolachalama
-    <br><em>Technical Report</em>
+    <br><em>International Journal of Medical Informatics</em>
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
