--- a/index.html
+++ b/index.html
@@ -102,8 +102,20 @@
   <br>
   <br>
   
+  𝗞𝗲𝘆 𝗤𝘂𝗲𝘀𝘁𝗶𝗼𝗻𝘀:<br>
+  <ul class="arrow-list">
+    <li>What impact can a TEAM of top multidisciplinary scientists have?</li>
+    <li>What kinds of VALUE can we researchers bring to society?</li>
+    <li>What is the most surprising FINDING in your research?</li>
+  </ul>
+
+  <br>
+  
   𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀:<br>
   My Ph.D. research focuses on <b>AI Grounding</b> [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">Continual Pre-training</a>, <a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v2">Retrieval-augmented Generation (RAG)</a>, <a href="https://www.medrxiv.org/content/10.1101/2025.08.06.25333160v1">Agentic RAG System</a>] as a pathway toward <b>Artificial General Intelligence (AGI) for Medicine</b>, with an emphasis on developing safe, reliable, and extensible foundations. Specifically, my work focuses on the following dimensions:
+  <br>
+  <br>
+  
   <li>𝗠𝗲𝗮𝘀𝘂𝗿𝗲𝗺𝗲𝗻𝘁
     <ul class="arrow-list">
       <li>Quality Estimation of Natural Language Generation (NLG)</li>
