--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <br>
   
   𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀:<br>
-  My Ph.D. research focuses on <b>AI Grounding</b> [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">Continual Pre-training</a>, <a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v2">Retrieval-augmented Generation (RAG)</a>, <a href="https://www.medrxiv.org/content/10.1101/2025.08.06.25333160v1">Agentic RAG System</a>] as a pathway toward <b>Artificial General Intelligence (AGI) for Medicine</b>, with an emphasis on developing safe, reliable, and extensible foundations. Specifically, my work focuses on the following dimensions:
+  My Ph.D. research focuses on <b>AI Grounding</b> [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">Continual Pre-training</a>, <a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v2">Retrieval-augmented Generation (RAG)</a>, <a href="https://www.sciencedirect.com/science/article/pii/S1386505626000791">Agentic RAG System</a>] as a pathway toward <b>Artificial General Intelligence (AGI) for Medicine</b>, with an emphasis on developing safe, reliable, and extensible foundations. Specifically, my work focuses on the following dimensions:
   <br>
   <br>
   
@@ -126,7 +126,7 @@
   <li>𝗠𝗼𝗱𝗲𝗹𝗶𝗻𝗴
     <ul class="arrow-list">
       <li>Multimodal Foundation Model (FM) and Large Vision-language Model (LVLM)</li>
-      <li>AI Workflow, Agentic System, and Multi-agent System (MAS) [<a href="https://www.medrxiv.org/content/10.1101/2025.08.06.25333160v1">1</a>, <a href="https://aclanthology.org/2025.emnlp-main.893">2</a>]</li>
+      <li>AI Workflow, Agentic System, and Multi-agent System (MAS) [<a href="https://www.sciencedirect.com/science/article/pii/S1386505626000791">1</a>, <a href="https://aclanthology.org/2025.emnlp-main.893">2</a>]</li>
       <li>Diffusion Model [<a href="https://ieeexplore.ieee.org/document/10566053">1</a>]</li>
       <li>Graph CNN (GCN) [<a href="https://ieeexplore.ieee.org/document/9889159">1</a>]</li>
       <li>Attention-based BiLSTM-GCN [<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2021.706229/full">1</a>]</li>
@@ -388,7 +388,7 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
-    <strong>Jan 2026</strong> Our <a href="https://www.medrxiv.org/content/10.1101/2025.08.06.25333160v1"> Medical Agentic RAG System</a> is accepted by <em>International Journal of Medical Informatics</em>!
+    <strong>Jan 2026</strong> Our <a href="https://www.sciencedirect.com/science/article/pii/S1386505626000791"> Medical Agentic RAG System</a> is accepted by <em>International Journal of Medical Informatics</em>!
   </li>
   <li>
     <strong>Jan 2026</strong> I will serve as a Program Committee member for ACL 2026 (Industry Track).
@@ -611,7 +611,7 @@
     <div style="float:right;">
       <a href="./files/Presentation/Evidence-Retrieval-and-Grounding.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
       <a href="./files/Manuscripts/Tool_using_AI_agent_2025.pdf"><i class="fab fa fa-file-pdf-o"></i> Manuscript</a>
-      <a href="https://www.medrxiv.org/content/10.1101/2025.08.06.25333160v1"><i class="fab fa fa-file-pdf-o"></i> medRxiv</a>
+      <a href="https://www.sciencedirect.com/science/article/pii/S1386505626000791"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div><br>
     <strong>Shuyue Jia</strong>, Subhrangshu Bit, Varuna H. Jasodanand, Yi Liu, Vijaya B. Kolachalama
     <br><em>International Journal of Medical Informatics</em>
