--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </div>
 
 <p>
-  I am a Ph.D. student in Computer Engineering at <a href="https://www.bu.edu">Boston University</a>, under the supervision of <a href="https://vkola-lab.github.io/team" style="color:black;">Prof. Vijaya Kolachalama</a>. Prior to BU, I received my M.Phil. degree (2023) in Computer Science from <a href="https://www.cityu.edu.hk">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang" style="color:black;">Prof. Shiqi Wang</a>, and B.Eng. degree (2020) in Intelligence Science and Technology from <a href="https://www.neepu.edu.cn">Northeast Electric Power University</a>, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900" style="color:black;">Prof. Yimin Hou</a> and <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html" style="color:black;">Prof. Jinglei Lv</a>. In 2017, I attended a summer school at <a href="https://uci.edu">University of California, Irvine</a>. I am a member of a research lab that emphasizes a 𝘁𝗲𝗮𝗺-𝗳𝗶𝗿𝘀𝘁 culture and values 𝗾𝘂𝗮𝗹𝗶𝘁𝘆, 𝗶𝗻𝘁𝗲𝗴𝗿𝗶𝘁𝘆, 𝗹𝗲𝗮𝗱𝗲𝗿𝘀𝗵𝗶𝗽, and 𝘀𝗲𝗿𝘃𝗶𝗰𝗲. My goal is to translate cutting-edge research into impactful clinical applications.
+  I am a Ph.D. student in Computer Engineering at <a href="https://www.bu.edu">Boston University</a>, under the supervision of <a href="https://vkola-lab.github.io/team" style="color:black;">Prof. Vijaya Kolachalama</a>. Prior to BU, I received my M.Phil. degree (2023) in Computer Science from <a href="https://www.cityu.edu.hk">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang" style="color:black;">Prof. Shiqi Wang</a>, and B.Eng. degree (2020) in Intelligence Science and Technology from <a href="https://www.neepu.edu.cn">Northeast Electric Power University</a>, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900" style="color:black;">Prof. Yimin Hou</a> and <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html" style="color:black;">Prof. Jinglei Lv</a>. In 2017, I attended a summer school at <a href="https://uci.edu">University of California, Irvine</a>. My long-term goal is to translate cutting-edge research into impactful clinical applications.
   
   <br>
   <br>
@@ -100,15 +100,6 @@
   <a href="https://brucejia.myportfolio.com/">Check out my collections here!</a>
 
   <br>
-  <br>
-  
-  𝗞𝗲𝘆 𝗤𝘂𝗲𝘀𝘁𝗶𝗼𝗻𝘀:<br>
-  <ul class="arrow-list">
-    <li>What impact can a TEAM of top multidisciplinary scientists have?</li>
-    <li>What kinds of VALUE can we researchers bring to society?</li>
-    <li>What is the most surprising FINDING in your research?</li>
-  </ul>
-
   <br>
   
   𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀:<br>
